--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,5 +3,5 @@ body {
 }
 
 canvas{
-    background-image: url("./../img/mapTile_022.png");
+    background-image: url("./../img/Backround.png");
 }
