--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,4 +4,6 @@ body {
 
 canvas{
     background-image: url("./../img/Backround.png");
+    background-position: center;
+    background-size: cover;
 }
