--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,7 +14,7 @@ body {
 
 canvas { 
     image-rendering: pixelated;
-    background-image: url("./../img/Backround.png");
+    background-image: url("./../img/QuestBackground.png");
     background-position: center;
     background-size: cover;
 }
